--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,10 @@ packages = [ { include = "brain_games" }, ]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.7"
 
 [build-system]
 requires = ["poetry>=0.12"]
