--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
-python:
-    - "3.7.3"
+python: 3.7.3
 
 before_install:
     - pip install poetry
+    - poetry add --dev flake8
 
 script:
     - make lint
