--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
 name = "SHAFIGULLINIK_brain_games"
-version = "0.1.2"
+version = "0.2.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 packages = [ { include = "brain_games" }, ]
 
 [tool.poetry.scripts]
   brain-games = "brain_games.scripts.brain_games:main"
+  brain-even = "brain_games.scripts.brain_even:main"
+
 
 [tool.poetry.dependencies]
 python = "^3.7"
