--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [tool.poetry]
 name = "SHAFIGULLINIK_brain_games"
-version = "0.2.0"
+version = "0.5.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
-packages = [ { include = "brain_games" }, ]
+packages = [ { include = "brain_games" }, { include = "brain_games/games" }, ]
 
 [tool.poetry.scripts]
   brain-games = "brain_games.scripts.brain_games:main"
   brain-even = "brain_games.scripts.brain_even:main"
+  brain-calc = "brain_games.scripts.brain_calc:main"
+  brain-gcd = "brain_games.scripts.brain_gcd:main"
 
 
 [tool.poetry.dependencies]
