--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "SHAFIGULLINIK_brain_games"
-version = "0.6.0"
+version = "0.7.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 packages = [ { include = "brain_games" }, ]
@@ -11,6 +11,7 @@ packages = [ { include = "brain_games" }, ]
   brain-calc = "brain_games.scripts.brain_calc:main"
   brain-gcd = "brain_games.scripts.brain_gcd:main"
   brain-progression = "brain_games.scripts.brain_progression:main"
+  brain-prime = "brain_games.scripts.brain_prime:main"
 
 
 [tool.poetry.dependencies]
