--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,13 @@
 [tool.poetry]
 name = "shafigullinik_brain_games"
-version = "0.7.2"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.7.3"
+description = "package for 1st python project"
+authors = ["Ilnar <ilnar@example.com>"]
+repository = "https://github.com/ShafigullinIK/python-project-lvl1"
+classifiers = [
+    "Development Status :: 4 - Beta"
+]
+
 packages = [ { include = "brain_games" }, ]
 
 [tool.poetry.scripts]
